# openfire

./: .gitignore  CLAUDE.md  README.md  components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml
.understand-anything/: .understandignore  fingerprints.json  knowledge-graph.json  meta.json
specs/: ACTION_PLAN.md  ARCHITECTURE_SPECS.md  architecture_and_roadmap.md  project_roadmap.md
specs/build_guide/: 00_overview.md  01_initialization.md  02_rust_backend.md  03_basic_ui.md  04_read_operations.md  05_write_operations.md  06_refinement.md
specs2/: 00_phase2_overview.md  01_rust_backend_impl.md  02_frontend_state_management.md  03_security_and_storage.md
spike/google-oauth/: Cargo.toml  README.md
spike/google-oauth/src/: main.rs
src/: App.tsx  main.tsx  style.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  credentials.rs  emulator.rs  error.rs  lib.rs  models.rs  state.rs
src-tauri/tests/: emulator_audit.rs
src/components/collections/: CollectionTree.tsx  (+5 more)
src/hooks/: firestore.test.ts  firestore.ts  use-keyboard-shortcuts.test.ts  use-keyboard-shortcuts.ts  use-unsaved-changes.test.ts  use-unsaved-changes.ts
src/lib/: cell-flush.test.ts  cell-flush.ts  dialog-utils.test.ts  dialog-utils.ts  error-utils.test.ts  error-utils.ts  field-types.test.ts  field-types.ts  firestore-utils.test.ts  firestore-utils.ts  glass-constants.test.ts  glass-constants.ts  keyboard-shortcuts.test.ts  keyboard-shortcuts.ts  monaco-setup.ts  script-completions.test.ts  script-completions.ts  script-engine.test.ts  script-engine.ts  tauri.test.ts  tauri.ts  toast-utils.test.ts  toast-utils.ts
src/stores/: auth-store.test.ts  auth-store.ts  cell-edits-store.test.ts  cell-edits-store.ts  connection-store.test.ts  connection-store.ts  dialog-store.test.ts  dialog-store.ts  doc-drafts-store.test.ts  doc-drafts-store.ts  nav-store.test.ts  nav-store.ts  palette-store.test.ts  palette-store.ts  query-store.test.ts  query-store.ts  recents-store.test.ts  recents-store.ts  script-store.test.ts  script-store.ts  tabs-store.test.ts  tabs-store.ts  view-store.test.ts  view-store.ts
src/types/: firestore.ts
(+94 files in other folders)
