[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1.48.0", features = ["full"] }
tauri-plugin-shell = "2.3.3"
firestore = "0.47.0"
googapis = "0.6.0"
tonic = "0.14"
prost = "0.14"
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
gcloud-sdk = "0.28.3"
prost-types = "0.14"
tauri-plugin-dialog = "2"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
